--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "run-debugger": "react-devtools"
   },
   "dependencies": {
     "react": "16.8.6",
@@ -27,6 +28,7 @@
     "eslint-plugin-react-native": "^3.7.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
+    "react-devtools": "^3.6.3",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
