--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --verbose --coverage",
+    "test:update": "jest --verbose --coverage --updateSnapshot",
+    "test:watch": "jest --verbose --watch",
+    "coverage": "jest --verbose --coverage && open ./coverage/lcov-report/index.html",
     "lint": "eslint .",
     "run-debugger": "react-devtools"
   },
@@ -21,17 +24,40 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-react-16-adapter-setup": "^0.1.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-native": "^3.7.0",
     "jest": "^24.8.0",
+    "jest-enzyme": "^7.1.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-devtools": "^3.6.3",
+    "react-dom": "^16.9.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "cacheDirectory": "./cache",
+    "coveragePathIgnorePatterns": [
+      "./gradle",
+      "./android",
+      "./ios",
+      "./node_modules"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 80
+      }
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react-native|react-clone-referenced-element|react-navigation)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setupJestForReact.js"
+    ]
   }
 }
